done nav and hero section and set a strucure for why development section

--- a/index.html
+++ b/index.html
@@ -8,13 +8,41 @@
 </head>
 <body>
     <header>
+        <nav>
+            <h1>Mr.Sohan</h1>
+            <button class="btn-nav"> <span>Download Resume</span></button>
+        </nav>
 
+        <!-- hero section -->
+         <section class="hero">
+           <div class="hero-content">
+            <img src="assets/Group.png" alt="">
+            <h1>"In the near future, I hope to become a Developer."</h1>
+            <p>So lets begin this journey by learning html,css,css framework,javascript,react,and a strong database system like mongodb..remember stay focused in the journey to get a good output</p>
+            <button> <span>Contact with me</span></button>
+           </div>
+         </section>
     </header> 
-    <main>
 
+    <main>
+       <section class="why-development">
+        <div class="container">
+            <h1 class="title">Why Web Development??</h1>
+            <p class="description"> </p>
+          <div class="content1">
+
+          </div>
+          <div class="content2">
+
+          </div>
+          <div class="content3">
+            
+          </div>
+        </div>
+       </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
