--- a/index.html
+++ b/index.html
@@ -28,15 +28,32 @@
        <section class="why-development">
         <div class="container">
             <h1 class="title">Why Web Development??</h1>
-            <p class="description"> </p>
+            <p class="description">Web development is a critical, high-demand, and lucrative career choice, offering flexibility, creative freedom, and a low barrier to entry.</p>
           <div class="content1">
-
+            <div class="content">
+                <h1 class="text-heading">I will Do Coding and Change The World</h1>
+                <p class="text-description">Stay focussed in your endeavours and learn only what’s relevant to what you want to achieve.</p>
+                <button class="btn-primary"><span>Learn more</span></button>
+            </div>
+            <img src="assets/Layer_1.png" alt="">
           </div>
           <div class="content2">
 
+             <img src="assets/Group 3.png" alt="">
+              <div class="content">
+                <h1 class="text-heading">I will help People by creating Modern Web System</h1>
+                <p class="text-description">Modern Website can help in many sector like medical,military,school&colleges .</p>
+                <button class="btn-primary"><span>Learn more</span></button>
+              </div>
+
           </div>
           <div class="content3">
-            
+            <div class="content">
+                <h1 class="text-heading">I will Do Coding and Change The World</h1>
+                <p class="text-description">Stay focussed in your endeavours and learn only what’s relevant to what you want to achieve.</p>
+                <button class="btn-primary"><span>Learn more</span></button>
+            </div>
+            <img src="assets/Group 4.png" alt="">
           </div>
         </div>
        </section>
