inspiration section finished

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     </header> 
 
     <main>
+      <!-- why development section -->
+
        <section class="why-development">
         <div class="container">
             <h1 class="title">Why Web Development??</h1>
@@ -32,7 +34,7 @@
           <div class="content1">
             <div class="content">
                 <h1 class="text-heading">I will Do Coding and Change The World</h1>
-                <p class="text-description">Stay focussed in your endeavours and learn only what’s relevant to what you want to achieve.</p>
+                <p class="text-description">Stay focussed in your endeavours and learn only what’s <br> relevant to what you want to achieve.</p>
                 <button class="btn-primary"><span>Learn more</span></button>
             </div>
             <img src="assets/Layer_1.png" alt="">
@@ -42,7 +44,8 @@
              <img src="assets/Group 3.png" alt="">
               <div class="content">
                 <h1 class="text-heading">I will help People by creating Modern Web System</h1>
-                <p class="text-description">Modern Website can help in many sector like medical,military,school&colleges .</p>
+                <p class="text-description">Modern Website can help in many sector like medical,military, <br>
+                  school&colleges .</p>
                 <button class="btn-primary"><span>Learn more</span></button>
               </div>
 
@@ -50,13 +53,32 @@
           <div class="content3">
             <div class="content">
                 <h1 class="text-heading">I will Do Coding and Change The World</h1>
-                <p class="text-description">Stay focussed in your endeavours and learn only what’s relevant to what you want to achieve.</p>
+                <p class="text-description">Stay focussed in your endeavours and learn only what’s <br> relevant to what you want to achieve.</p>
                 <button class="btn-primary"><span>Learn more</span></button>
             </div>
             <img src="assets/Group 4.png" alt="">
           </div>
         </div>
        </section>
+
+       <!-- Inspiration section -->
+
+       <section class="inspiration">
+        <div class="content1">
+           <h1 class="heading-primary">My Inspiration</h1>
+           <p class="description-primary">I truly inspired form programming hero and  i learned my <br> web journey from their courses</p>
+        </div>
+        <div class="content2">
+           <iframe width="1150px" height="550px" src="https://www.youtube.com/embed/iWuEpnTTD3k?si=U9JaZqaylciwU_fX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+       </section>
+       
+       <!-- my current target section -->
+       <section class="my-current-target">
+  
+       </section>
+
     </main>
     <footer>
 
